URL constructor is deprecated. switch to URI